[gd_scene load_steps=12 format=3 uid="uid://d3bfendedojt6"]

[ext_resource type="Script" path="res://Script/fire_ball.gd" id="1_fo3sb"]
[ext_resource type="Texture2D" uid="uid://4v1pcxeqy8b7" path="res://Assets/Characters/Wizard/Magic(projectile)/Wizard-Attack02_Effect.png" id="1_m6xmq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0imxd"]
atlas = ExtResource("1_m6xmq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrbon"]
atlas = ExtResource("1_m6xmq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke6jc"]
atlas = ExtResource("1_m6xmq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldi7h"]
atlas = ExtResource("1_m6xmq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1qfm"]
atlas = ExtResource("1_m6xmq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mngoo"]
atlas = ExtResource("1_m6xmq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_52p3n"]
atlas = ExtResource("1_m6xmq")
region = Rect2(600, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_rwvio"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0imxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrbon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke6jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldi7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1qfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mngoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52p3n")
}],
"loop": false,
"name": &"fire_ball",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_odtnk"]

[node name="fire_ball" type="Area2D"]
y_sort_enabled = true
position = Vector2(-4, -2)
collision_mask = 3
script = ExtResource("1_fo3sb")

[node name="fire_ball_sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_rwvio")
animation = &"fire_ball"
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9, 3)
rotation = 0.539307
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_odtnk")

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="fire_ball_sprite" to="." method="_on_fire_ball_sprite_animation_finished"]
